--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         const formResponse = document.getElementById('form-response');
         
         // 여기에 Apps Script URL을 붙여넣으세요
-        const APPS_SCRIPT_URL = '여기에_배포된_APPS_SCRIPT_URL을_넣어주세요';
+        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyxdGl0SFNUmo8Llccr6ChIOAR2JHJk7Ft3ohRaKcCH61zIspZdc5xA7_NrdClO9SEu/exec';
 
         form.addEventListener('submit', e => {
             e.preventDefault();
